[package]
name = "wlipman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wl-clipboard-rs = "0"
wl-clipboard-rs = { git = "https://github.com/OverShifted/wl-clipboard-rs/" }
anyhow = "1"
serde = "1"
serde_json = "1"
dirs = "4"