[package]
name = "wlipman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wl-clipboard-rs = "0"
wl-clipboard-rs = { git = "https://github.com/OverShifted/wl-clipboard-rs/" }
anyhow = { version = "1", features = ["backtrace"] }
serde = "1"
rmp-serde = "1"
dirs = "4"
